# guestbook

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt
guest_book/: manage.py
guest_book/api/v1/: urls.py
guest_book/api/v1/entry/: pagination.py  serializers.py  urls.py  views.py
guest_book/api/v1/user/: serializers.py  urls.py  views.py
guest_book/entry/: admin.py  apps.py  models.py  signals.py  tests.py
guest_book/entry/management/commands/: generate_fake_data.py
guest_book/entry/migrations/: 0001_initial.py  0002_entry_idx_entry_user_date_desc.py
guest_book/guest_book/: asgi.py  settings.py  urls.py  wsgi.py
guest_book/libs/: normalize.py
guest_book/libs/models/: abstract.py
guest_book/user/: models.py  tests.py
guest_book/user/migrations/: 0001_initial.py
